# wasi-virt-transformer

./: Cargo.toml
src/: bindings.rs  lib.rs
wit/: world.wit
